Fix time and location alignment

--- a/src/components/cvSection/cv-section.css
+++ b/src/components/cvSection/cv-section.css
@@ -11,6 +11,7 @@
 }
 
 .cvSectionHeading {
+    text-align: center;
     margin-top: 0;
     margin-bottom: 5px;
     font-size: x-large;
@@ -27,11 +28,18 @@
 
 .cvSectionTimeLocation {
     display: flex;
-    gap: 25px;
+}
+
+.cvSectionTimeLocation > p:first-child {
+    margin-right: 25px;
+}
+
+.cvSectionTimeLocation > p:only-child {
+    margin-right: 0;
 }
 
 .cvSectionTimeLocation > p {
-    margin-top: 0;
+    margin: 0;
     font-size: small;
     font-family: 'Open Sans', sans-serif;
     color: gray;
